examples/bad/print-fun.oo
print((int x) : bool -> { return x == 5; }); // TC error
